# cuda_ray_tracing

./: .gitignore
results/: cuda_spheres_01.02.2022.ppm  cuda_spheres_01.03.2022.ppm  cuda_spheres_12.22.2021.ppm
source/: CMakeLists.txt  render.cu
source/cuda_implementation/: CMakeLists.txt
source/cuda_implementation/camera/: camera.cu  camera.cuh
source/cuda_implementation/camera/interfaces/: i_camera.cuh
source/cuda_implementation/create_scene/: create_scene.cuh  create_scene_old.cuh
source/cuda_implementation/materials/: material.cu  material.cuh
source/cuda_implementation/materials/interfaces/: i_material.cuh  i_phong_reflection_coefficients.cuh  i_reflection_coefficients.cuh  i_refraction_coefficient.cuh  i_refraction_coefficients.cuh  i_specular_exponent.cuh
source/cuda_implementation/miscellaneous/: CUDAMemory.cuh
source/cuda_implementation/miscellaneous/templates/: n_tuple.cuh
source/cuda_implementation/objects/: object_list.cu  object_list.cuh  sphere.cu  sphere.cuh
source/cuda_implementation/objects/interfaces/: i_object_list.cuh  i_sphere.cuh  i_target_object.cuh
source/cuda_implementation/rays/: hit_record.cu  hit_record.cuh  light_source.cu  light_source.cuh  light_source_effects.cu  light_source_effects.cuh  ray.cu  ray.cuh  ray_interactions.cu  ray_interactions.cuh
source/cuda_implementation/rays/interfaces/: i_hit_record.cuh  i_light_source.cuh  i_light_source_effects.cuh  i_ray.cuh  i_ray_interactions.cuh  i_ray_intersection.cuh
source/cuda_playground/: CMakeLists.txt  test.cu  vector_add.cu
source/cuda_playground/pointer_arithmetic_revisited/: simple_c.cu
